--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@inngest/agent-kit": "latest",
     "@prisma/client": "latest",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/themes": "^3.2.1",
     "@supabase/supabase-js": "latest",
     "inngest": "latest",
