feat: simplify organization schema and enhance organizations page
- Remove OrgKeyword and OrgAlias tables for cleaner data model
- Replace primaryDomain with single website field for URLs
- Add logo and bannerImage fields to Organization model
- Create Organizations page with responsive grid layout
- Add organization seeding script from markdown data
- Replace Radix icons with Phosphor icons in sidebar
- Fix all TypeScript errors and update Prisma types
- Clean up leftover Payload CMS files and references

Database migrations:
- Add description field to organizations
- Remove keywords table and relations
- Remove aliases table and relations
- Add logo and bannerImage fields
- Remove redundant primaryDomain field

The Organization model now has a simplified, clean structure:
- id, name, description, website, logo, bannerImage, timestamps

--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "start": "next start",
     "prisma:migrate": "prisma migrate dev",
     "prisma:generate": "prisma generate",
+    "seed:organizations": "tsx scripts/seed-organizations.ts",
+    "update:org-descriptions": "tsx scripts/update-organization-descriptions.ts",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@inngest/agent-kit": "latest",
+    "@phosphor-icons/react": "^2.1.10",
     "@prisma/client": "latest",
     "@radix-ui/themes": "^3.2.1",
     "@supabase/supabase-js": "latest",
@@ -36,6 +39,7 @@
     "eslint-config-next": "latest",
     "inngest-cli": "latest",
     "prisma": "latest",
+    "tsx": "latest",
     "typescript": "latest"
   }
 }
