--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   },
   "type": "module",
   "scripts": {
-    "dev": "concurrently -k -n NEXT,INNGEST \"next dev\" \"inngest dev\"",
-    "next": "next dev",
+    "dev": "next dev",
     "inngest:dev": "inngest dev",
     "build": "next build",
     "start": "next start",
@@ -15,15 +14,16 @@
     "prisma:generate": "prisma generate",
     "seed:organizations": "tsx scripts/seed-organizations.ts",
     "update:org-descriptions": "tsx scripts/update-organization-descriptions.ts",
+    "manual-scrape": "tsx scripts/manual-scrape.ts",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@inngest/agent-kit": "latest",
+    "@ai-sdk/openai": "^2.0.22",
     "@phosphor-icons/react": "^2.1.10",
     "@prisma/client": "latest",
-    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/themes": "^3.2.1",
     "@supabase/supabase-js": "latest",
+    "ai": "^5.0.25",
     "inngest": "latest",
     "next": "latest",
     "openai": "latest",
