--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "prisma:migrate": "prisma migrate dev",
     "prisma:generate": "prisma generate",
     "seed:organizations": "tsx scripts/seed-organizations.ts",
+    "seed:articles": "tsx scripts/seed-articles.ts",
+    "seed:articles:live": "tsx scripts/seed-articles-live.ts",
+    "seed:all": "npm run seed:organizations && npm run seed:articles",
+    "seed:all:live": "npm run seed:organizations && npm run seed:articles:live",
     "update:org-descriptions": "tsx scripts/update-organization-descriptions.ts",
     "manual-scrape": "tsx scripts/manual-scrape.ts",
     "typecheck": "tsc --noEmit"
@@ -24,11 +28,14 @@
     "@radix-ui/themes": "^3.2.1",
     "@supabase/supabase-js": "latest",
     "ai": "^5.0.25",
+    "date-fns": "^4.1.0",
     "inngest": "latest",
     "next": "latest",
     "openai": "latest",
     "react": "latest",
     "react-dom": "latest",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
     "zod": "latest"
   },
   "devDependencies": {
