feat: Major organization management and scraping pipeline improvements
🗄️ Organization Model Updates:
- Added newsUrl field for organization-specific article sources
- Added tags array for categorization
- Added ein field for tax identification
- Dropped unused logo, bannerImage, and guidestarUrl fields
- Created database migrations for all schema changes

📊 Organization Data Management:
- Created comprehensive backup system with JSON/SQL exports
- Added investor portal data seeder (40 organizations imported)
- Built admin interface for CRUD operations on organizations
- Updated organizations page to clean table format with published article counts

🔍 Article Discovery & Scraping:
- Replaced NewsAPI with Google Custom Search for historical coverage
- Added Firecrawl website mapping for first-party content discovery
- Combined Google Search + website crawling for comprehensive URL discovery
- Added 180/365 day timeframe options for discovery

🛡️ Content Quality & Error Handling:
- Added error page and hallucination detection to prevent fake content
- Enhanced image extraction with size-based sorting and quality filtering
- Improved PostgreSQL encoding error handling (null byte sanitization)
- Added content validation with AI-powered filtering

🎨 UI/UX Improvements:
- Updated organizations table with Name, Website, EIN, Published Articles, Tags columns
- Added reject button for articles (reversible vs permanent delete)
- Enhanced admin article management interface
- Improved bulk scraping workflow with better progress tracking

📁 New Files Added:
- Organization backup/restore system
- Google Search integration library
- Firecrawl website mapping functions
- Article content validation AI functions
- Comprehensive admin interfaces

This commit represents a complete overhaul of the organization management system
and significant improvements to the article discovery and scraping pipeline.

--- a/package.json
+++ b/package.json
@@ -24,11 +24,12 @@
   "dependencies": {
     "@ai-sdk/openai": "^2.0.22",
     "@phosphor-icons/react": "^2.1.10",
-    "@prisma/client": "latest",
+    "@prisma/client": "^6.14.0",
     "@radix-ui/themes": "^3.2.1",
     "@supabase/supabase-js": "latest",
     "ai": "^5.0.25",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.1",
     "inngest": "latest",
     "next": "latest",
     "openai": "latest",
