feat: Add automated discovery pipeline and major enhancements
🚀 Automated Pipeline
- Add fully automated discovery pipeline for batch processing
- Process all orgs with newsUrl but no published articles
- Complete Phase 1+2+3 without human intervention
- Professional UI with detailed results and progress tracking
- Added /automated-pipeline page and API endpoint

🧠 AI URL Filtering
- Add OpenAI-powered URL filtering in Phase 1
- Intelligently classify and keep only content URLs
- Remove nav/category/social links automatically
- Handle markdown code fence responses from GPT-4o

📊 Articles Pagination & Sorting
- Add proper pagination to main articles page
- Sort by publishedAt date (newest first)
- 20 articles per page with Previous/Next controls
- Enhanced stats footer with total counts

📅 Publication Date Extraction
- Extract article publication dates and authors
- Store in ScrapedContent and Article models
- Parse various date formats with validation
- Display in article listings

🖼️ Image Extraction Improvements
- Less aggressive image filtering for AI selection
- Add Firecrawl fallback for blocked requests
- Parse images from both HTML and Markdown content
- Extract CSS background images from div styles
- Better anti-bot protection with user agents

🎨 Phase 3 AI Finalization
- AI-powered title formatting and enhancement
- Intelligent image selection from extracted images
- Complete article enhancement pipeline
- Proper error handling and logging

🔧 Technical Improvements
- Update Phase 2/3 APIs to support selectAll parameter
- Enhanced Firecrawl integration with better error handling
- Improved URL discovery with Firecrawl + regex fallback
- Better TypeScript types and error handling
- Enhanced sidebar navigation

✨ UI/UX Enhancements
- Better loading states and progress indicators
- Comprehensive error handling and user feedback
- Professional result tables with status indicators
- Enhanced organization dropdown with article counts

--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
     "@prisma/client": "^6.14.0",
     "@radix-ui/themes": "^3.2.1",
     "@supabase/supabase-js": "latest",
+    "@types/jsdom": "^21.1.7",
     "ai": "^5.0.25",
+    "axios": "^1.11.0",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.1",
     "inngest": "latest",
+    "jsdom": "^26.1.0",
     "next": "latest",
     "openai": "latest",
     "react": "latest",
